# prodex

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LOCAL.md  QUICKSTART.md  README.md  THIRD_PARTY_NOTICES.md  compose.yaml  deny.toml  install.ps1  install.sh  package.json  patch_quickstart.sh  patch_readme.sh
crates/prodex-app/: Cargo.toml
crates/prodex-app-reports/: Cargo.toml
crates/prodex-app-reports/src/: info.rs  lib.rs  selection.rs  session.rs
crates/prodex-app/src/: app_commands.rs  app_server_broker.rs  app_server_broker_preview.rs  app_server_broker_protocol.rs  app_state.rs  audit_log.rs  bench_support.rs  cli_args.rs  command_dispatch.rs  core_constants.rs  dashboard.rs  dashboard_html.rs  expose.rs  gateway_application.rs  gateway_backend.rs  housekeeping.rs  lib.rs  presidio_runtime.rs  profile_commands.rs  profile_identity.rs  profile_local_config.rs  proxy_config.rs  quota_support.rs  runtime_allocator.rs  runtime_anthropic.rs  runtime_background.rs  runtime_broker.rs  runtime_broker_shared.rs  runtime_capabilities.rs  runtime_catalog_config.rs  runtime_caveman.rs  runtime_claude.rs  runtime_claude_auth.rs  runtime_config.rs  runtime_core_shared.rs  runtime_deepseek_config.rs  runtime_desktop.rs  runtime_doctor.rs  runtime_external_provider_config.rs  runtime_gemini_auth.rs  (+25 more)
crates/prodex-application/: Cargo.toml
crates/prodex-application/src/: accounting.rs  auth.rs  config.rs  control_plane.rs  data_plane.rs  distributed_rate_limit.rs  governance.rs  lib.rs  obligations.rs  provider.rs  request_context.rs  request_context_snapshot_tests.rs  virtual_key.rs
crates/prodex-application/tests/: application_boundary.rs  distributed_rate_limit.rs  execution_approval.rs  governance_inspection.rs  governance_obligations.rs  governance_pipeline.rs  reconciliation_policy.rs  route_explain.rs
crates/prodex-audit-log/: Cargo.toml
crates/prodex-audit-log/src/: checksum.rs  lib.rs  private_file.rs
crates/prodex-authn/: Cargo.toml
crates/prodex-authn/src/: browser_flow.rs  compatibility.rs  evidence.rs  lib.rs
crates/prodex-authn/tests/: oidc.rs
crates/prodex-authz/: Cargo.toml
crates/prodex-authz/src/: lib.rs
crates/prodex-authz/tests/: boundary.rs
crates/prodex-caveman-assets/: Cargo.toml
crates/prodex-caveman-assets/src/: asset_verification.rs  embedded_files.rs  embedded_tree.rs  fs_ops.rs  hook_trust.rs  launch_home.rs  lib.rs  localization.rs  marketplace.rs  rtk.rs  super_optimizers.rs  super_optimizers_codebase_memory_tests.rs  super_optimizers_tests.rs  toml_helpers.rs
crates/prodex-cli/: Cargo.toml
crates/prodex-cli/src/: cleanup.rs  help.rs  lib.rs  ping.rs  presidio.rs  profile.rs  runtime_args.rs  runtime_features.rs  session_context.rs  super_provider_limits.rs
crates/prodex-cli/tests/: copilot_runtime_args.rs
crates/prodex-config/: Cargo.toml
crates/prodex-config/src/: lib.rs
crates/prodex-config/tests/: config_boundary.rs  governance_config.rs
crates/prodex-context/: Cargo.toml
crates/prodex-context/src/: audit.rs  blob_noise.rs  command_output.rs  critical_signal.rs  lib.rs
crates/prodex-control-plane/: Cargo.toml
crates/prodex-control-plane/src/: lib.rs
crates/prodex-control-plane/tests/: control_plane.rs
crates/prodex-core/: Cargo.toml
crates/prodex-core/src/: lib.rs
crates/prodex-domain/: Cargo.toml
crates/prodex-domain/src/: accounting.rs  accounting_budget.rs  api.rs  audit.rs  backup.rs  capabilities.rs  correlation.rs  deployment.rs  errors.rs  health.rs  idempotency.rs  identity.rs  ids.rs  lib.rs  migration.rs  observability.rs  policy.rs  rate_limit.rs  secrets.rs  security.rs  slo.rs
crates/prodex-domain/tests/: accounting.rs  api.rs  audit.rs  audit_digest.rs  backup.rs  capabilities.rs  correlation.rs  deployment.rs  errors.rs  governance_approval.rs  governance_classification.rs  governance_inspection.rs  governance_policy.rs  grouped_request_budget.rs  health.rs  idempotency.rs  identity.rs  ids.rs  migration.rs  observability.rs  policy.rs  rate_limit.rs  secrets.rs  security.rs  slo.rs
crates/prodex-gateway-core/: Cargo.toml
crates/prodex-gateway-core/src/: lib.rs  virtual_key.rs  virtual_key_tests.rs
crates/prodex-gateway-core/tests/: admission.rs
crates/prodex-gateway-http/: Cargo.toml
crates/prodex-gateway-http/src/: api_version.rs  edge_security.rs  gateway_admin_route.rs  lib.rs  planning.rs  preconditions.rs  request.rs  request_target.rs  route.rs  upstream_headers.rs
crates/prodex-gateway-http/tests/: http_policy.rs
crates/prodex-gateway-server/: Cargo.toml
crates/prodex-gateway-server/src/: channel_body.rs  connection.rs  in_process_upgrade.rs  lib.rs  tests.rs
crates/prodex-housekeeping/: Cargo.toml
crates/prodex-housekeeping/src/: lib.rs
crates/prodex-memory/: Cargo.toml
crates/prodex-memory/src/: lib.rs
crates/prodex-observability/: Cargo.toml
crates/prodex-observability/src/: accounting.rs  api.rs  audit.rs  configuration.rs  lib.rs  operations.rs  provider.rs  runtime.rs  siem.rs  trace.rs
crates/prodex-observability/tests/: observability_boundary.rs
crates/prodex-presidio/: Cargo.toml
crates/prodex-presidio/src/: lib.rs
crates/prodex-profile-export/: Cargo.toml
crates/prodex-profile-export/examples/: argon2id_benchmark.rs
crates/prodex-profile-export/src/: copilot.rs  data_model.rs  envelope.rs  import_journal.rs  import_plan.rs  lib.rs  selection.rs  summary.rs  transaction.rs
crates/prodex-profile-identity/: Cargo.toml
crates/prodex-profile-identity/src/: lib.rs
crates/prodex-provider-core/: Cargo.toml
crates/prodex-provider-core/catalog/: models.json
crates/prodex-provider-spi/: Cargo.toml
crates/prodex-proxy-config/: Cargo.toml
crates/prodex-quota/: Cargo.toml
crates/prodex-runtime-anthropic/: Cargo.toml
crates/prodex-runtime-broker-log/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: canonical_request_target.rs  governance_policy.rs  oidc_endpoint_policy.rs  profile_export_envelope.rs  runtime_policy_parse.rs
(+3513 files in other folders)
