[package]
name = "prodex"
version = "0.69.0"
edition = "2024"
description = "OpenAI profile pooling and safe auto-rotate for Codex CLI and Claude Code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/christiandoxa/prodex"
publish = false

[workspace]
members = [
    ".",
    "crates/prodex-app-reports",
    "crates/prodex-caveman-assets",
    "crates/prodex-cli",
    "crates/prodex-audit-log",
    "crates/prodex-bench-support",
    "crates/prodex-codex-config",
    "crates/prodex-context",
    "crates/prodex-core",
    "crates/prodex-profile-export",
    "crates/prodex-profile-identity",
    "crates/prodex-proxy-config",
    "crates/prodex-quota",
    "crates/prodex-redaction",
    "crates/prodex-runtime-anthropic",
    "crates/prodex-runtime-broker",
    "crates/prodex-runtime-doctor",
    "crates/prodex-runtime-capabilities",
    "crates/prodex-runtime-claude",
    "crates/prodex-runtime-cookies",
    "crates/prodex-runtime-launch",
    "crates/prodex-runtime-policy",
    "crates/prodex-runtime-metrics",
    "crates/prodex-runtime-mem",
    "crates/prodex-runtime-state",
    "crates/prodex-runtime-store",
    "crates/prodex-runtime-tuning",
    "crates/prodex-secret-store",
    "crates/prodex-shared-codex-fs",
    "crates/prodex-shared-types",
    "crates/prodex-state",
    "crates/prodex-runtime-proxy",
    "crates/prodex-terminal-ui",
    "crates/prodex-update-notice",
]
resolver = "3"

[workspace.package]
version = "0.69.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/christiandoxa/prodex"

[features]
default = []
bench-support = ["dep:prodex_bench_support"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
prodex_audit_log = { package = "prodex-audit-log", path = "crates/prodex-audit-log" }
prodex_app_reports = { package = "prodex-app-reports", path = "crates/prodex-app-reports" }
prodex_bench_support = { package = "prodex-bench-support", path = "crates/prodex-bench-support", optional = true }
codex_config = { package = "prodex-codex-config", path = "crates/prodex-codex-config" }
prodex_caveman_assets = { package = "prodex-caveman-assets", path = "crates/prodex-caveman-assets" }
prodex_cli = { package = "prodex-cli", path = "crates/prodex-cli" }
prodex_context = { package = "prodex-context", path = "crates/prodex-context" }
prodex_core = { package = "prodex-core", path = "crates/prodex-core" }
prodex_profile_export = { package = "prodex-profile-export", path = "crates/prodex-profile-export" }
prodex_profile_identity = { package = "prodex-profile-identity", path = "crates/prodex-profile-identity" }
prodex_proxy_config = { package = "prodex-proxy-config", path = "crates/prodex-proxy-config" }
prodex_quota = { package = "prodex-quota", path = "crates/prodex-quota" }
prodex_runtime_mem = { package = "prodex-runtime-mem", path = "crates/prodex-runtime-mem" }
prodex_runtime_state = { package = "prodex-runtime-state", path = "crates/prodex-runtime-state" }
redaction = { package = "prodex-redaction", path = "crates/prodex-redaction" }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls", "system-proxy", "socks"] }
rpassword = "7.4.0"
runtime_anthropic_crate = { package = "prodex-runtime-anthropic", path = "crates/prodex-runtime-anthropic" }
prodex_runtime_doctor = { package = "prodex-runtime-doctor", path = "crates/prodex-runtime-doctor" }
prodex_runtime_broker = { package = "prodex-runtime-broker", path = "crates/prodex-runtime-broker" }
prodex_runtime_capabilities = { package = "prodex-runtime-capabilities", path = "crates/prodex-runtime-capabilities" }
prodex_runtime_claude = { package = "prodex-runtime-claude", path = "crates/prodex-runtime-claude" }
prodex_runtime_cookies = { package = "prodex-runtime-cookies", path = "crates/prodex-runtime-cookies" }
prodex_runtime_launch = { package = "prodex-runtime-launch", path = "crates/prodex-runtime-launch" }
runtime_metrics = { package = "prodex-runtime-metrics", path = "crates/prodex-runtime-metrics" }
prodex_runtime_policy = { package = "prodex-runtime-policy", path = "crates/prodex-runtime-policy" }
runtime_proxy_crate = { package = "prodex-runtime-proxy", path = "crates/prodex-runtime-proxy" }
prodex_runtime_store = { package = "prodex-runtime-store", path = "crates/prodex-runtime-store" }
prodex_runtime_tuning = { package = "prodex-runtime-tuning", path = "crates/prodex-runtime-tuning" }
prodex_shared_codex_fs = { package = "prodex-shared-codex-fs", path = "crates/prodex-shared-codex-fs" }
prodex_shared_types = { package = "prodex-shared-types", path = "crates/prodex-shared-types" }
prodex_state = { package = "prodex-state", path = "crates/prodex-state" }
secret_store = { package = "prodex-secret-store", path = "crates/prodex-secret-store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
terminal_ui = { package = "prodex-terminal-ui", path = "crates/prodex-terminal-ui" }
prodex_update_notice = { package = "prodex-update-notice", path = "crates/prodex-update-notice" }
tiny_http = "0.12.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "time"] }
toml = "1.1.2"
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake", "rustls-tls-native-roots", "url"] }

[dev-dependencies]
aes-gcm-siv = "0.11.1"
criterion = "0.8.2"

[[bench]]
name = "runtime_proxy_hot_paths"
harness = false
required-features = ["bench-support"]
