[package]
name = "prodex"
version = "0.331.0"
edition = "2024"
description = "Multi-provider Codex wrapper with OpenAI quota-aware routing and Claude Code support"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/christiandoxa/prodex"
rust-version = "1.97.0"

[workspace]
members = [
    ".",
    "crates/prodex-app",
    "crates/prodex-app-reports",
    "crates/prodex-application",
    "crates/prodex-authn",
    "crates/prodex-authz",
    "crates/prodex-caveman-assets",
    "crates/prodex-cli",
    "crates/prodex-config",
    "crates/prodex-control-plane",
    "crates/prodex-audit-log",
    "crates/prodex-bench-support",
    "crates/prodex-gateway-core",
    "crates/prodex-gateway-http",
    "crates/prodex-gateway-server",
    "crates/prodex-codex-config",
    "crates/prodex-context",
    "crates/prodex-core",
    "crates/prodex-domain",
    "crates/prodex-housekeeping",
    "crates/prodex-mcp-stdio",
    "crates/prodex-observability",
    "crates/prodex-presidio",
    "crates/prodex-profile-export",
    "crates/prodex-profile-identity",
    "crates/prodex-provider-core",
    "crates/prodex-provider-spi",
    "crates/prodex-proxy-config",
    "crates/prodex-quota",
    "crates/prodex-redaction",
    "crates/prodex-runtime-anthropic",
    "crates/prodex-runtime-broker",
    "crates/prodex-runtime-broker-log",
    "crates/prodex-runtime-doctor",
    "crates/prodex-runtime-capabilities",
    "crates/prodex-runtime-claude",
    "crates/prodex-runtime-cookies",
    "crates/prodex-runtime-gemini-cli-compat",
    "crates/prodex-runtime-launch",
    "crates/prodex-runtime-log",
    "crates/prodex-runtime-policy",
    "crates/prodex-runtime-metrics",
    "crates/prodex-runtime-quota",
    "crates/prodex-runtime-state",
    "crates/prodex-runtime-store",
    "crates/prodex-runtime-tuning",
    "crates/prodex-secret-store",
    "crates/prodex-session-store",
    "crates/prodex-shared-codex-fs",
    "crates/prodex-shared-types",
    "crates/prodex-state",
    "crates/prodex-storage",
    "crates/prodex-storage-postgres",
    "crates/prodex-storage-postgres-runtime",
    "crates/prodex-storage-redis",
    "crates/prodex-storage-redis-runtime",
    "crates/prodex-storage-sqlite",
    "crates/prodex-storage-sqlite-runtime",
    "crates/prodex-runtime-proxy",
    "crates/prodex-terminal-ui",
    "crates/prodex-update-notice",
]
resolver = "3"

[workspace.package]
version = "0.331.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/christiandoxa/prodex"
rust-version = "1.97.0"

[workspace.dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.102"
argon2 = "0.5.3"
arc-swap = "1.9.2"
base64 = "0.22.1"
aws-lc-rs = "1.17.1"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
codex_config = { package = "prodex-codex-config", path = "crates/prodex-codex-config", version = "0.331.0" }
deadpool-postgres = "=0.14.1"
dirs = "6.0.0"
fs2 = "0.4.3"
filetime = "0.2.26"
getrandom = "0.4.2"
http-body-util = "0.1.3"
hyper = "1.10.1"
hyper-util = "0.1.20"
keyring = "4.1.5"
libc = "0.2.186"
os_info = "3.12.0"
pbkdf2 = "0.13.0"
portable-pty = "0.9.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
unicode-width = "0.2.2"
prodex_audit_log = { package = "prodex-audit-log", path = "crates/prodex-audit-log", version = "0.331.0" }
prodex_authn = { package = "prodex-authn", path = "crates/prodex-authn", version = "0.331.0" }
prodex_authz = { package = "prodex-authz", path = "crates/prodex-authz", version = "0.331.0" }
prodex_app = { package = "prodex-app", path = "crates/prodex-app", version = "0.331.0" }
prodex_app_reports = { package = "prodex-app-reports", path = "crates/prodex-app-reports", version = "0.331.0" }
prodex_application = { package = "prodex-application", path = "crates/prodex-application", version = "0.331.0" }
prodex_bench_support = { package = "prodex-bench-support", path = "crates/prodex-bench-support", version = "0.331.0" }
prodex_caveman_assets = { package = "prodex-caveman-assets", path = "crates/prodex-caveman-assets", version = "0.331.0" }
prodex_cli = { package = "prodex-cli", path = "crates/prodex-cli", version = "0.331.0" }
prodex_config = { package = "prodex-config", path = "crates/prodex-config", version = "0.331.0" }
prodex_control_plane = { package = "prodex-control-plane", path = "crates/prodex-control-plane", version = "0.331.0" }
prodex_context = { package = "prodex-context", path = "crates/prodex-context", version = "0.331.0" }
prodex_core = { package = "prodex-core", path = "crates/prodex-core", version = "0.331.0" }
prodex_domain = { package = "prodex-domain", path = "crates/prodex-domain", version = "0.331.0" }
prodex_gateway_core = { package = "prodex-gateway-core", path = "crates/prodex-gateway-core", version = "0.331.0" }
prodex_gateway_http = { package = "prodex-gateway-http", path = "crates/prodex-gateway-http", version = "0.331.0" }
prodex_gateway_server = { package = "prodex-gateway-server", path = "crates/prodex-gateway-server", version = "0.331.0" }
prodex_housekeeping = { package = "prodex-housekeeping", path = "crates/prodex-housekeeping", version = "0.331.0" }
prodex_mcp_stdio = { package = "prodex-mcp-stdio", path = "crates/prodex-mcp-stdio", version = "0.331.0" }
prodex_observability = { package = "prodex-observability", path = "crates/prodex-observability", version = "0.331.0" }
prodex_presidio = { package = "prodex-presidio", path = "crates/prodex-presidio", version = "0.331.0" }
prodex_profile_export = { package = "prodex-profile-export", path = "crates/prodex-profile-export", version = "0.331.0" }
prodex_profile_identity = { package = "prodex-profile-identity", path = "crates/prodex-profile-identity", version = "0.331.0" }
prodex_provider_core = { package = "prodex-provider-core", path = "crates/prodex-provider-core", version = "0.331.0" }
prodex_provider_spi = { package = "prodex-provider-spi", path = "crates/prodex-provider-spi", version = "0.331.0" }
prodex_proxy_config = { package = "prodex-proxy-config", path = "crates/prodex-proxy-config", version = "0.331.0" }
prodex_quota = { package = "prodex-quota", path = "crates/prodex-quota", version = "0.331.0" }
prodex_runtime_broker = { package = "prodex-runtime-broker", path = "crates/prodex-runtime-broker", version = "0.331.0" }
prodex_runtime_broker_log = { package = "prodex-runtime-broker-log", path = "crates/prodex-runtime-broker-log", version = "0.331.0" }
prodex_runtime_capabilities = { package = "prodex-runtime-capabilities", path = "crates/prodex-runtime-capabilities", version = "0.331.0" }
prodex_runtime_claude = { package = "prodex-runtime-claude", path = "crates/prodex-runtime-claude", version = "0.331.0" }
prodex_runtime_cookies = { package = "prodex-runtime-cookies", path = "crates/prodex-runtime-cookies", version = "0.331.0" }
prodex_runtime_doctor = { package = "prodex-runtime-doctor", path = "crates/prodex-runtime-doctor", version = "0.331.0" }
prodex_runtime_gemini_cli_compat = { package = "prodex-runtime-gemini-cli-compat", path = "crates/prodex-runtime-gemini-cli-compat", version = "0.331.0" }
prodex_runtime_launch = { package = "prodex-runtime-launch", path = "crates/prodex-runtime-launch", version = "0.331.0" }
prodex_runtime_policy = { package = "prodex-runtime-policy", path = "crates/prodex-runtime-policy", version = "0.331.0" }
prodex_runtime_quota = { package = "prodex-runtime-quota", path = "crates/prodex-runtime-quota", version = "0.331.0" }
prodex_runtime_state = { package = "prodex-runtime-state", path = "crates/prodex-runtime-state", version = "0.331.0" }
prodex_runtime_store = { package = "prodex-runtime-store", path = "crates/prodex-runtime-store", version = "0.331.0" }
prodex_runtime_tuning = { package = "prodex-runtime-tuning", path = "crates/prodex-runtime-tuning", version = "0.331.0" }
prodex_session_store = { package = "prodex-session-store", path = "crates/prodex-session-store", version = "0.331.0" }
prodex_shared_codex_fs = { package = "prodex-shared-codex-fs", path = "crates/prodex-shared-codex-fs", version = "0.331.0" }
prodex_shared_types = { package = "prodex-shared-types", path = "crates/prodex-shared-types", version = "0.331.0" }
prodex_state = { package = "prodex-state", path = "crates/prodex-state", version = "0.331.0" }
prodex_storage = { package = "prodex-storage", path = "crates/prodex-storage", version = "0.331.0" }
prodex_storage_postgres = { package = "prodex-storage-postgres", path = "crates/prodex-storage-postgres", version = "0.331.0" }
prodex_storage_postgres_runtime = { package = "prodex-storage-postgres-runtime", path = "crates/prodex-storage-postgres-runtime", version = "0.331.0" }
prodex_storage_redis = { package = "prodex-storage-redis", path = "crates/prodex-storage-redis", version = "0.331.0" }
prodex_storage_redis_runtime = { package = "prodex-storage-redis-runtime", path = "crates/prodex-storage-redis-runtime", version = "0.331.0" }
prodex_storage_sqlite = { package = "prodex-storage-sqlite", path = "crates/prodex-storage-sqlite", version = "0.331.0" }
prodex_storage_sqlite_runtime = { package = "prodex-storage-sqlite-runtime", path = "crates/prodex-storage-sqlite-runtime", version = "0.331.0" }
prodex_update_notice = { package = "prodex-update-notice", path = "crates/prodex-update-notice", version = "0.331.0" }
redaction = { package = "prodex-redaction", path = "crates/prodex-redaction", version = "0.331.0" }
reqwest = { version = "0.13.2", default-features = false }
rpassword = "7.5.4"
crossterm = "0.29.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
postgres = "0.19.12"
redis = { version = "1.2.4", default-features = false }
rustls = { version = "0.23.41", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-native-certs = "0.8.4"
tokio-rustls = "0.26.4"
runtime_anthropic_crate = { package = "prodex-runtime-anthropic", path = "crates/prodex-runtime-anthropic", version = "0.331.0" }
runtime_log = { package = "prodex-runtime-log", path = "crates/prodex-runtime-log", version = "0.331.0" }
runtime_metrics = { package = "prodex-runtime-metrics", path = "crates/prodex-runtime-metrics", version = "0.331.0" }
runtime_proxy_crate = { package = "prodex-runtime-proxy", path = "crates/prodex-runtime-proxy", version = "0.331.0" }
secret_store = { package = "prodex-secret-store", path = "crates/prodex-secret-store", version = "0.331.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0"
sha2 = "0.11.0"
terminal_ui = { package = "prodex-terminal-ui", path = "crates/prodex-terminal-ui", version = "0.331.0" }
tiny_http = "0.12.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-postgres = "=0.7.18"
tokio-postgres-rustls = { version = "0.14.0", features = ["aws-lc-rs"] }
toml = "1.1.2"
tungstenite = { version = "0.30.0", default-features = false, features = ["handshake"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
url = "2.5.8"
zeroize = "1.9.0"

[features]
default = []
bench-support = ["prodex_app/bench-support"]
allocation-bench-support = ["prodex_app/allocation-bench-support"]

[[example]]
name = "runtime_allocator_trim_evidence"
required-features = ["bench-support"]

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
clap = { workspace = true }
prodex_app = { workspace = true }
prodex_application = { workspace = true }
prodex_config = { workspace = true }
prodex_control_plane = { workspace = true }
prodex_domain = { workspace = true }
prodex_gateway_http = { workspace = true }
prodex_gateway_server = { workspace = true }
prodex_storage = { workspace = true }
prodex_storage_postgres_runtime = { workspace = true }
prodex_storage_sqlite = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
secret_store = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
arc-swap = { workspace = true }
base64 = { workspace = true }
criterion = "0.8.2"
libc = { workspace = true }
prodex_provider_core = { workspace = true }
prodex_provider_spi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "runtime_proxy_hot_paths"
harness = false
required-features = ["bench-support"]

[[bench]]
name = "governance_hot_paths"
harness = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[lints]
workspace = true
