[package]
name = "prodex-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
prodex-authn = { path = "../crates/prodex-authn" }
prodex-domain = { path = "../crates/prodex-domain" }
prodex-gateway-http = { path = "../crates/prodex-gateway-http" }
prodex-profile-export = { path = "../crates/prodex-profile-export" }
prodex-runtime-policy = { path = "../crates/prodex-runtime-policy" }
serde_json = "=1.0.150"
toml = "=1.1.3"

[[bin]]
name = "canonical_request_target"
path = "fuzz_targets/canonical_request_target.rs"
test = false
doc = false
bench = false

[[bin]]
name = "profile_export_envelope"
path = "fuzz_targets/profile_export_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oidc_endpoint_policy"
path = "fuzz_targets/oidc_endpoint_policy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "runtime_policy_parse"
path = "fuzz_targets/runtime_policy_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "governance_policy"
path = "fuzz_targets/governance_policy.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
