[package]
name = "prodex-app-reports"
version.workspace = true
edition.workspace = true
description = "App command report helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_app_reports"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
prodex_quota = { workspace = true }
prodex_runtime_state = { workspace = true }
prodex_runtime_tuning = { workspace = true }
prodex_shared_types = { workspace = true }
prodex_state = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terminal_ui = { workspace = true }
