[package]
name = "prodex-app-reports"
version.workspace = true
edition.workspace = true
description = "App command report helpers for prodex"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_app_reports"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
prodex_cli = { workspace = true }
prodex_quota = { workspace = true }
prodex_runtime_quota = { workspace = true }
prodex_runtime_tuning = { workspace = true }
prodex_session_store = { workspace = true }
prodex_shared_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terminal_ui = { workspace = true }

[lints]
workspace = true
