[package]
name = "prodex-app"
version.workspace = true
edition.workspace = true
description = "Application orchestration crate for the prodex CLI"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_app"
path = "src/lib.rs"
test = false
doctest = false

[features]
default = []
bench-support = ["dep:prodex_bench_support"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
prodex_audit_log = { package = "prodex-audit-log", path = "../prodex-audit-log", version = "0.84.0" }
prodex_app_reports = { package = "prodex-app-reports", path = "../prodex-app-reports", version = "0.84.0" }
prodex_bench_support = { package = "prodex-bench-support", path = "../prodex-bench-support", optional = true, version = "0.84.0" }
codex_config = { package = "prodex-codex-config", path = "../prodex-codex-config", version = "0.84.0" }
prodex_caveman_assets = { package = "prodex-caveman-assets", path = "../prodex-caveman-assets", version = "0.84.0" }
prodex_cli = { package = "prodex-cli", path = "../prodex-cli", version = "0.84.0" }
prodex_context = { package = "prodex-context", path = "../prodex-context", version = "0.84.0" }
prodex_core = { package = "prodex-core", path = "../prodex-core", version = "0.84.0" }
prodex_housekeeping = { package = "prodex-housekeeping", path = "../prodex-housekeeping", version = "0.84.0" }
prodex_profile_export = { package = "prodex-profile-export", path = "../prodex-profile-export", version = "0.84.0" }
prodex_profile_identity = { package = "prodex-profile-identity", path = "../prodex-profile-identity", version = "0.84.0" }
prodex_proxy_config = { package = "prodex-proxy-config", path = "../prodex-proxy-config", version = "0.84.0" }
prodex_quota = { package = "prodex-quota", path = "../prodex-quota", version = "0.84.0" }
prodex_runtime_mem = { package = "prodex-runtime-mem", path = "../prodex-runtime-mem", version = "0.84.0" }
prodex_runtime_quota = { package = "prodex-runtime-quota", path = "../prodex-runtime-quota", version = "0.84.0" }
prodex_runtime_state = { package = "prodex-runtime-state", path = "../prodex-runtime-state", version = "0.84.0" }
redaction = { package = "prodex-redaction", path = "../prodex-redaction", version = "0.84.0" }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls", "system-proxy", "socks"] }
rpassword = "7.4.0"
runtime_anthropic_crate = { package = "prodex-runtime-anthropic", path = "../prodex-runtime-anthropic", version = "0.84.0" }
prodex_runtime_doctor = { package = "prodex-runtime-doctor", path = "../prodex-runtime-doctor", version = "0.84.0" }
prodex_runtime_broker = { package = "prodex-runtime-broker", path = "../prodex-runtime-broker", version = "0.84.0" }
prodex_runtime_broker_log = { package = "prodex-runtime-broker-log", path = "../prodex-runtime-broker-log", version = "0.84.0" }
prodex_runtime_capabilities = { package = "prodex-runtime-capabilities", path = "../prodex-runtime-capabilities", version = "0.84.0" }
prodex_runtime_claude = { package = "prodex-runtime-claude", path = "../prodex-runtime-claude", version = "0.84.0" }
prodex_runtime_cookies = { package = "prodex-runtime-cookies", path = "../prodex-runtime-cookies", version = "0.84.0" }
prodex_runtime_launch = { package = "prodex-runtime-launch", path = "../prodex-runtime-launch", version = "0.84.0" }
runtime_log = { package = "prodex-runtime-log", path = "../prodex-runtime-log", version = "0.84.0" }
runtime_metrics = { package = "prodex-runtime-metrics", path = "../prodex-runtime-metrics", version = "0.84.0" }
prodex_runtime_policy = { package = "prodex-runtime-policy", path = "../prodex-runtime-policy", version = "0.84.0" }
runtime_proxy_crate = { package = "prodex-runtime-proxy", path = "../prodex-runtime-proxy", version = "0.84.0" }
prodex_runtime_store = { package = "prodex-runtime-store", path = "../prodex-runtime-store", version = "0.84.0" }
prodex_runtime_tuning = { package = "prodex-runtime-tuning", path = "../prodex-runtime-tuning", version = "0.84.0" }
prodex_session_store = { package = "prodex-session-store", path = "../prodex-session-store", version = "0.84.0" }
prodex_shared_codex_fs = { package = "prodex-shared-codex-fs", path = "../prodex-shared-codex-fs", version = "0.84.0" }
prodex_shared_types = { package = "prodex-shared-types", path = "../prodex-shared-types", version = "0.84.0" }
prodex_state = { package = "prodex-state", path = "../prodex-state", version = "0.84.0" }
secret_store = { package = "prodex-secret-store", path = "../prodex-secret-store", version = "0.84.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
terminal_ui = { package = "prodex-terminal-ui", path = "../prodex-terminal-ui", version = "0.84.0" }
prodex_update_notice = { package = "prodex-update-notice", path = "../prodex-update-notice", version = "0.84.0" }
tiny_http = "0.12.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "time"] }
toml = "1.1.2"
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake", "rustls-tls-native-roots", "url"] }


[dev-dependencies]
aes-gcm-siv = "0.11.1"
