[package]
name = "prodex-app"
version.workspace = true
edition.workspace = true
description = "Application orchestration crate for the prodex CLI"
license.workspace = true
repository.workspace = true

[lib]
name = "prodex_app"
path = "src/lib.rs"
test = false
doctest = false

[features]
default = []
bench-support = ["dep:prodex_bench_support"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
prodex_audit_log = { workspace = true }
prodex_app_reports = { workspace = true }
prodex_bench_support = { workspace = true, optional = true }
codex_config = { workspace = true }
prodex_caveman_assets = { workspace = true }
prodex_cli = { workspace = true }
prodex_context = { workspace = true }
prodex_core = { workspace = true }
prodex_housekeeping = { workspace = true }
prodex_profile_export = { workspace = true }
prodex_profile_identity = { workspace = true }
prodex_proxy_config = { workspace = true }
prodex_quota = { workspace = true }
prodex_runtime_mem = { workspace = true }
prodex_runtime_quota = { workspace = true }
prodex_runtime_state = { workspace = true }
redaction = { workspace = true }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls", "system-proxy", "socks"] }
rpassword = "7.4.0"
runtime_anthropic_crate = { workspace = true }
prodex_runtime_doctor = { workspace = true }
prodex_runtime_broker = { workspace = true }
prodex_runtime_broker_log = { workspace = true }
prodex_runtime_capabilities = { workspace = true }
prodex_runtime_claude = { workspace = true }
prodex_runtime_cookies = { workspace = true }
prodex_runtime_launch = { workspace = true }
runtime_log = { workspace = true }
runtime_metrics = { workspace = true }
prodex_runtime_policy = { workspace = true }
runtime_proxy_crate = { workspace = true }
prodex_runtime_store = { workspace = true }
prodex_runtime_tuning = { workspace = true }
prodex_session_store = { workspace = true }
prodex_shared_codex_fs = { workspace = true }
prodex_shared_types = { workspace = true }
prodex_state = { workspace = true }
secret_store = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
terminal_ui = { workspace = true }
prodex_update_notice = { workspace = true }
tiny_http = "0.12.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "time"] }
toml = "1.1.2"
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake", "rustls-tls-native-roots", "url"] }


[dev-dependencies]
aes-gcm-siv = "0.11.1"
